--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
                 <div class="updated">
                     <h3>Stay Updated</h3>
                     <input type="text" placeholder="Enter your email">
-                    <img src="img/input_img_background.svg" alt="image">
+                    <button>
+                        <img class="button_bg" src="img/input-button.svg" alt="image">
+                    </button>
+                    
                 </div>
             </div>
         </div>
